--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <!-- ضع كود إثبات الملكية من Google Search Console هنا -->
+  <!-- مثال:
+  <meta name="google-site-verification" content="PUT-YOUR-GOOGLE-VERIFY-CODE-HERE" />
+  -->
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="مدرستي برو - مساعد التعاميم | أداة للمعلمين تساعد في البحث داخل التعاميم وتنظيمها ونسخها بسهولة.">
@@ -19,6 +24,7 @@
 <body>
   <div class="box">
     <h1>مدرستي برو - مساعد التعاميم</h1>
+
     <p>
       أداة مخصصة للمعلمين تسهّل البحث في التعاميم، فرزها، نسخ النصوص، وتجهيزها بسرعة.
       مصممة لتوفير الوقت وتقليل التكرار في العمل اليومي داخل المدرسة.
@@ -31,8 +37,8 @@
       🔹 توفير وقت المعلم
     </p>
 
-    <a class="btn" href="#" target="_blank">
-      تثبيت الإضافة (سيتم وضع رابط متجر كروم هنا)
+    <a class="btn" href="PUT-YOUR-CHROME-EXTENSION-LINK-HERE" target="_blank">
+      تثبيت الإضافة من متجر كروم
     </a>
 
     <p style="margin-top:30px; font-size:15px; color:#555;">
