--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- ضع كود إثبات الملكية من Google Search Console هنا -->
   <!-- مثال:
-  <meta name="google-site-verification" content="PUT-YOUR-GOOGLE-VERIFY-CODE-HERE" />
+  <meta name="google-site-verification" content="googleae96f90d5afb2371.html" />
   -->
   
   <meta charset="UTF-8" />
