--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <!-- ضع كود إثبات الملكية من Google Search Console هنا -->
-  <!-- مثال:
-  <meta name="google-site-verification" content="googleae96f90d5afb2371.html" />
-  -->
-  
+  <!-- كود إثبات الملكية من Google Search Console -->
+  <meta name="google-site-verification" content="561pt5O_8jwrm1IXlsLSEwQ0fzkLxDluCDRt0V6pXwQ" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="مدرستي برو - مساعد التعاميم | أداة للمعلمين تساعد في البحث داخل التعاميم وتنظيمها ونسخها بسهولة.">
