--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       🔹 توفير وقت المعلم
     </p>
 
-    <a class="btn" href="PUT-YOUR-CHROME-EXTENSION-LINK-HERE" target="_blank">
+    <a class="btn" href="https://chromewebstore.google.com/detail/ckljbcpcjibgnjcjofgkppedalgnkfbe" target="_blank">
       تثبيت الإضافة من متجر كروم
     </a>
 
