--- a/index.html
+++ b/index.html
@@ -6,43 +6,183 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="مدرستي برو - مساعد التعاميم | أداة للمعلمين تساعد في البحث داخل التعاميم وتنظيمها ونسخها بسهولة.">
-  <title>مدرستي برو - مساعد التعاميم</title>
+  <meta name="description" content="مدرستي برو - مساعد التعاميم الاحترافي للمدارس السعودية. استخراج حسابات Microsoft للمعلمين، وإرسال التعاميم بضغطة زر، مع دعم Outlook و Microsoft Graph API ونظام اشتراكات مرن.">
+  <title>مدرستي برو - مساعد التعاميم الاحترافي</title>
 
   <style>
-    body { font-family: Tahoma, sans-serif; background:#f7f7f7; margin:0; padding:0; text-align:center; }
-    .box { max-width:650px; margin:60px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 0 10px rgba(0,0,0,0.08); }
-    h1 { color:#1a73e8; margin-bottom:15px; }
-    p { line-height:1.9; color:#333; font-size:18px; }
-    a.btn { display:inline-block; margin-top:25px; padding:14px 28px; background:#1a73e8; color:white; border-radius:8px; text-decoration:none; font-size:18px; }
-    a.btn:hover { background:#155ab8; }
+    body {
+      font-family: Tahoma, sans-serif;
+      background:#f7f7f7;
+      margin:0;
+      padding:0;
+      direction: rtl;
+      text-align:right;
+    }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 15px;
+    }
+    .hero {
+      background:white;
+      padding:30px;
+      border-radius:14px;
+      box-shadow:0 0 12px rgba(0,0,0,0.06);
+      margin-bottom:20px;
+    }
+    h1 {
+      color:#1a73e8;
+      margin-top:0;
+      margin-bottom:10px;
+      font-size:28px;
+      text-align:right;
+    }
+    h2 {
+      color:#1a73e8;
+      margin-top:25px;
+      margin-bottom:10px;
+      font-size:22px;
+    }
+    p {
+      line-height:1.9;
+      color:#333;
+      font-size:16px;
+      margin:8px 0;
+    }
+    .tagline {
+      font-size:18px;
+      font-weight:bold;
+      margin-bottom:15px;
+    }
+    a.btn {
+      display:inline-block;
+      margin-top:18px;
+      padding:12px 22px;
+      background:#1a73e8;
+      color:white;
+      border-radius:8px;
+      text-decoration:none;
+      font-size:17px;
+    }
+    a.btn:hover {
+      background:#155ab8;
+    }
+    .section {
+      background:white;
+      padding:22px;
+      border-radius:12px;
+      box-shadow:0 0 10px rgba(0,0,0,0.04);
+      margin-top:15px;
+    }
+    ul {
+      margin:8px 20px 0 0;
+      padding:0;
+    }
+    ul li {
+      margin:5px 0;
+    }
+    .note {
+      font-size:14px;
+      color:#555;
+      margin-top:20px;
+    }
+    .seo {
+      margin-top:18px;
+      font-size:13px;
+      color:#666;
+    }
   </style>
 </head>
 
 <body>
-  <div class="box">
-    <h1>مدرستي برو - مساعد التعاميم</h1>
+  <div class="container">
 
-    <p>
-      أداة مخصصة للمعلمين تسهّل البحث في التعاميم، فرزها، نسخ النصوص، وتجهيزها بسرعة.
-      مصممة لتوفير الوقت وتقليل التكرار في العمل اليومي داخل المدرسة.
-    </p>
-    
-    <p><strong>المميزات:</strong><br>
-      🔹 بحث فوري داخل التعاميم<br>
-      🔹 نسخ نص بضغطة واحدة<br>
-      🔹 تنظيم وفرز أسهل<br>
-      🔹 توفير وقت المعلم
-    </p>
+    <!-- البانر الرئيسي -->
+    <div class="hero">
+      <h1>مدرستي برو - مساعد التعاميم الاحترافي</h1>
+      <p class="tagline">
+        استخراج حسابات Microsoft للمعلمين وإرسال التعاميم بضغطة زر 🚀
+      </p>
+      <p>
+        إضافة Chrome متخصصة لمساعدة الإداريين في المدارس السعودية على تسريع العمل الإداري،
+        تنظيم التعاميم، والتواصل مع جميع المعلمين بسهولة واحترافية.
+      </p>
 
-    <a class="btn" href="https://chromewebstore.google.com/detail/ckljbcpcjibgnjcjofgkppedalgnkfbe" target="_blank">
-      تثبيت الإضافة من متجر كروم
-    </a>
+      <a class="btn" href="https://chromewebstore.google.com/detail/ckljbcpcjibgnjcjofgkppedalgnkfbe" target="_blank">
+        تثبيت الإضافة من متجر كروم
+      </a>
 
-    <p style="margin-top:30px; font-size:15px; color:#555;">
-      الصفحة الرسمية لإضافة "مدرستي برو - مساعد التعاميم"
-    </p>
+      <p class="note">
+        تعمل مع متصفح Google Chrome، وتستهدف المدارس السعودية التي تستخدم حسابات Microsoft ومنصة مدرستي.
+      </p>
+    </div>
+
+    <!-- المميزات الرئيسية -->
+    <div class="section">
+      <h2>✨ المميزات الرئيسية</h2>
+
+      <h3>⚡ استخراج سريع وآمن لحسابات المعلمين</h3>
+      <ul>
+        <li>استخراج حسابات Microsoft لجميع المعلمين بضغطة زر.</li>
+        <li>فلترة تلقائية للحسابات الوهمية أو غير الصالحة.</li>
+        <li>حفظ البيانات محلياً في جهازك فقط بدون رفعها لأي خادم.</li>
+      </ul>
+
+      <h3>📝 إرسال التعاميم بسهولة</h3>
+      <ul>
+        <li>إرسال التعاميم لجميع المعلمين مباشرة عبر البريد الإلكتروني.</li>
+        <li>دعم Outlook و Microsoft Graph API لمرونة أعلى.</li>
+        <li>قوالب جاهزة للتعاميم لتسريع العمل اليومي.</li>
+      </ul>
+
+      <h3>🔒 الأمان والخصوصية</h3>
+      <ul>
+        <li>لا يتم حفظ أي بيانات على خوادم خارجية.</li>
+        <li>جميع البيانات تبقى داخل جهازك فقط.</li>
+        <li>لا نطلب صلاحيات غير ضرورية أو حساسة.</li>
+      </ul>
+
+      <h3>💎 نظام الاشتراكات</h3>
+      <ul>
+        <li>تجربة مجانية لمدة 7 أيام.</li>
+        <li>خطط اشتراك مرنة (شهري، 6 شهور، سنوي).</li>
+        <li>دعم فني مميز للإداريين والمدارس.</li>
+      </ul>
+
+      <h3>🚀 سهل الاستخدام</h3>
+      <ul>
+        <li>واجهة بسيطة وواضحة، موجهة للإداريين في المدارس.</li>
+        <li>لا تحتاج أي خبرة تقنية متقدمة.</li>
+        <li>دليل استخدام شامل يشرح الخطوات خطوة بخطوة.</li>
+      </ul>
+
+      <h3>⚙️ متطلبات الاستخدام</h3>
+      <ul>
+        <li>حساب فعّال في منصة مدرستي.</li>
+        <li>متصفح Google Chrome.</li>
+        <li>اتصال بالإنترنت.</li>
+      </ul>
+    </div>
+
+    <!-- لماذا مدرستي برو؟ -->
+    <div class="section">
+      <h2>⭐ لماذا مدرستي برو؟</h2>
+      <p>
+        صُمّم <strong>مدرستي برو - مساعد التعاميم</strong> خصيصاً للإداريين في المدارس السعودية الذين يريدون:
+      </p>
+      <ul>
+        <li>توفير ساعات طويلة من العمل اليدوي المكرر.</li>
+        <li>تقليل الأخطاء البشرية في نسخ الإيميلات وإرسال التعاميم.</li>
+        <li>رفع كفاءة العمل الإداري في المدرسة.</li>
+        <li>التركيز على ما هو أهم: متابعة المعلمين والطلاب بدل الأعمال الروتينية.</li>
+      </ul>
+
+      <p class="seo">
+        كلمات مفتاحية: مدرستي برو، مساعد التعاميم، تعاميم وزارة التعليم، تعاميم المعلمين،
+        أداة للمعلمين، أداة للإداريين، إرسال تعاميم للمعلمين، استخراج حسابات Microsoft، منصة مدرستي.
+      </p>
+    </div>
+
   </div>
 </body>
 </html>
-
